--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
   <router-outlet></router-outlet>
 </div>
 
+
+<app-ollie-main></app-ollie-main>
+
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
